apps/sprint-management/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sprint-management-service
  labels:
    app: sprint-management
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sprint-management
