apps/sprint-management/deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sprint-management-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: sprint-management.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sprint-management-service
                port:
                  number: 80
  tls:
    - hosts:
        - sprint-management.example.com
      secretName: sprint-management-tls
